--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -41,6 +41,11 @@ layout: default
         {% else %}
           <li class="email"><a href="mailto:example.david@blog.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
         {% endif %}
+        {% if site.social-youtube %}
+          <li class="youtube"><a href="https://www.youtube.com/user/{{site.social-youtube}}"><i class="fa fa-youtube-play"></i></a></li>
+        {% else %}
+          <li class="youtube"><a href="https://www.youtube.com/user/comedyfactoryindia"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+        {% endif %}
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
