--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -44,7 +44,7 @@ layout: default
         {% if site.social-youtube %}
           <li class="youtube"><a href="https://www.youtube.com/user/{{site.social-youtube}}"><i class="fa fa-youtube-play"></i></a></li>
         {% else %}
-          <li class="youtube"><a href="https://www.youtube.com/user/comedyfactoryindia"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+          <li class="youtube"><a href="https://www.youtube.com/channel/UCjPTSAodUFkCMqLrXOFHrug?view_as=subscriber"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
         {% endif %}
       </ul>
     </section> <!-- End Section Contact -->
