--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -42,7 +42,7 @@ layout: default
           <li class="email"><a href="sd.trvd3157@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
         {% endif %}
         {% if site.social-youtube %}
-          <li class="youtube"><a href="https://www.youtube.com/user/{{site.social-youtube}}"><i class="fa fa-youtube-play"></i></a></li>
+          <li class="youtube"><a href="https://www.youtube.com/channel/{{site.social-youtube}}"><i class="fa fa-youtube-play"></i></a></li>
         {% else %}
           <li class="youtube"><a href="https://www.youtube.com/channel/UCjPTSAodUFkCMqLrXOFHrug?view_as=subscriber"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
         {% endif %}
