--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -39,7 +39,7 @@ layout: default
         {% if site.social-email %}
           <li class="email"><a href="mailto:{{site.social-email}}"><i class="fa fa-envelope-o"></i></a></li>
         {% else %}
-          <li class="email"><a href="mailto:sd.trvd3157@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+          <li class="email"><a href="mailto:https://mail.google.com/mail/u/0"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
         {% endif %}
         {% if site.social-youtube %}
           <li class="youtube"><a href="https://www.youtube.com/channel/{{site.social-youtube}}"><i class="fa fa-youtube-play"></i></a></li>
